# jira820

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: index.html
examples/: config.yaml  curl-examples.sh
src/jira820/: __init__.py  agile.py  atom.py  cli.py  config.py  cql.py  jql.py  render.py  serialize.py  server.py  server_agile.py  server_attach.py  server_bitbucket.py  server_read.py  server_write.py  store.py  workflow.py  world.py
src/jira820/content/: en.py  ko.py
src/jira_dc_mock/: __init__.py  config.py  serialize.py  server.py  server_read.py  store.py  workflow.py  world.py
src/jira_dc_mock/content/: __init__.py  ko.py
tests/: conftest.py  test_agile.py  test_atom.py  test_attachments.py  test_config.py  test_jql.py  test_links.py  test_persist.py  test_priority.py  test_read.py  test_render.py  test_search.py  test_workflow.py  test_write.py
