[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-dc-8.20-mock"
version = "0.1.0"
description = "A stateful, read+write mock of Jira Data Center 8.20.8 (REST v2 + Agile boards/sprints/kanban) for local development and testing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "dongyi-kim" }]
keywords = ["jira", "mock", "fake", "testing", "jira-data-center", "rest-api", "agile", "sprint", "kanban"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/dongyi-kim/jira-dc-8.20-mock"
Issues = "https://github.com/dongyi-kim/jira-dc-8.20-mock/issues"

[project.scripts]
jira-dc-mock = "jira_dc_mock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_dc_mock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
