[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira820"
version = "0.9.0"
description = "Jira Data Center 8.20.8 을 로컬에서 흉내 내는 상태형 읽기+쓰기 mock 서버 (REST v2 + Agile 보드/스프린트/칸반)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "dongyi-kim" }]
keywords = ["jira", "mock", "fake", "testing", "jira-data-center", "rest-api", "agile", "sprint", "kanban"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyYAML>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/dongyi-kim/jira820"
Issues = "https://github.com/dongyi-kim/jira820/issues"

[project.scripts]
jira820 = "jira820.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jira820"]

[tool.hatch.build.targets.wheel.force-include]
"demo" = "jira820/demo"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
